syntax = "proto3";

package foundation.examples.clubchat.chats;

import "google/protobuf/timestamp.proto";

option go_package =
  "github.com/ri-nat/foundation/examples/clubchat/protos/chats";

// Chats service
service Chats {
  // ListChats returns a list of chats
  rpc ListChats(ListChatsRequest) returns (ChatsList) {}

  // SendMessage sends a message to a chat
  rpc SendMessage(SendMessageRequest) returns (Message) {}
}

//
// Messages
//

message Chat {
  string id = 1;
  string name = 2;
}

message ChatsList {
  repeated Chat chats = 1;
}

message Message {
  string id = 1;
  string chat_id = 2;
  string sender_id = 3;
  string sender_name = 4;
  string text = 5;
  google.protobuf.Timestamp created_at = 6;
}

//
// Events
//

message MessageSentEvent {
  string id = 1;
  string chat_id = 2;
  string sender_id = 3;
  string sender_name = 4;
  string text = 5;
  google.protobuf.Timestamp created_at = 6;
}

//
// ListChats
//

message ListChatsRequest {
}

//
// SendMessage
//

message SendMessageRequest {
  string chat_id = 1;
  string text = 2;
}
